knife tool snapping indicator not visible #65050

Closed
opened 2019-05-24 06:03:24 +02:00 by Daniel Ulrich · 8 comments

System Information
Operating system:macos mojave 10.14.4
Graphics card:intel iris 550

Blender Version
Broken: 2.8 e787700393
Worked: 2.8 8a6414ed46

Short description of error

when using the knife tool the green snapping indicator is gone or too small to see properly.

Exact steps for others to reproduce the error

create a cube
enter edit mode
press k to enter knife tool

green snapping indicator isn't visible any more on edges.

**System Information** Operating system:macos mojave 10.14.4 Graphics card:intel iris 550 **Blender Version** Broken: 2.8 e78770039397 Worked: 2.8 8a6414ed46f6 **Short description of error** when using the knife tool the green snapping indicator is gone or too small to see properly. **Exact steps for others to reproduce the error** create a cube enter edit mode press k to enter knife tool green snapping indicator isn't visible any more on edges.
Author

Added subscriber: @dan2

Added subscriber: @dan2
Author

Tried the same build on windows 7 with an nvidia 1080, on windows 10 with an rtx 2080, on a windows 10 laptop with intel hd4600/nvidia 880 and on kubuntu 16 with a 1070 - all working fine. Might be an OSX thing?

knife.gif

Tried the same build on windows 7 with an nvidia 1080, on windows 10 with an rtx 2080, on a windows 10 laptop with intel hd4600/nvidia 880 and on kubuntu 16 with a 1070 - all working fine. Might be an OSX thing? ![knife.gif](https://archive.blender.org/developer/F7064862/knife.gif)

Added subscriber: @SamuelAllen

Added subscriber: @SamuelAllen

Same issue here, running on Dell XPS 9575, i7 8505G with Intel HD 630/Radeon RX Vega M GL
blender-2.80-b3f96da2e605
Windows 10 Pro Version 10.0.17763 Build 17763

If I disable the Radeon GPU via device manager or set Blender to use the HD 630 via advanced Windows graphics settings,
the green indicator returns.

Running all latest available drivers from Intel.

Tested same build of Blender on my desktop, running same ver/build of Windows 10, Ryzen 5 1600/GTX 1080ti, works fine.

Have wiped all settings and started from factory, and also tried syncing settings between both machines, issue persists on laptop.

Same issue here, running on Dell XPS 9575, i7 8505G with Intel HD 630/Radeon RX Vega M GL blender-2.80-b3f96da2e605 Windows 10 Pro Version 10.0.17763 Build 17763 If I disable the Radeon GPU via device manager or set Blender to use the HD 630 via advanced Windows graphics settings, the green indicator returns. Running all latest available drivers from Intel. Tested same build of Blender on my desktop, running same ver/build of Windows 10, Ryzen 5 1600/GTX 1080ti, works fine. Have wiped all settings and started from factory, and also tried syncing settings between both machines, issue persists on laptop.
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2019-05-24 11:09:48 +02:00
Member

Doesnt happen here [fedora 30, 970m with 418.56 drivers], but would like to ask @fclem if this rings a bell?

Doesnt happen here [fedora 30, 970m with 418.56 drivers], but would like to ask @fclem if this rings a bell?

This issue was referenced by c4e4b6872a

This issue was referenced by c4e4b6872a918e8e58ff2d01306f96a17c65b9f5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65050
No description provided.