DRW: Fix issue introduce in removal of DRW_STATE_POINT

Fix issue raised by mano-wii in rB97d22e12b521

Fix T65050 knife tool snapping indicator not visible